@startuml
title アクション生成のDI
skinparam Linetype ortho
abstract ActionGenerator{
	IToio toio
	+ Action GenerareAction(IToio toio)
}
class ConcreteActionGen{}
struct Action{}
class Toio{
	Action GetCubeHandler()
}
interface IToio{
	Action GetCubeHandler()
}

ActionGenerator "1" <-- "*" Action
ActionGenerator "1" --> "1" IToio
ActionGenerator "1" <|-right- "*" ConcreteActionGen
Action "1" <-- "1" Toio
IToio "1" <|-- "1" Toio
@enduml